#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-02
2011-08-05 Mikhail S. Dubrovin
- Class CSPadCalibPars provides access to the calibration parameters 
  for CSPad geometry.

Tag: V00-00-01
2011-07-21 Mikhail S. Dubrovin

-----------------------------------------------------------------------
	
- Class PSCalib/CalibFileFinder is created with central method 
  CalibFileFinder::findCalibFile(...) which similar to the 
  CsPadCalibV1Cvt::findCalibFile(...) from O2OTranslator/CsPadCalibV1Cvt
  All necessary parameters should be specified at constructor initialization.
	
- add example PSCalib/app/ex_calib_file_finder.cpp

	
2011-07-11 Mikhail S. Dubrovin	

Description of calibration subdirectories:
------------------------------------------
https://confluence.slac.stanford.edu/display/PCDS/CsPad+calibration+in+translator


Package created on on psdev:
----------------------------
cd LCLS/
newrel ana-current PSCalib-V00
cd PSCalib-V00/
sit_setup
newpkg PSCalib
mkdir PSCalib/src
mkdir PSCalib/app
mkdir PSCalib/include
psvn newpkg PSCalib
addpkg PSCalib
	
cp $SIT_RELDIR/ana-current/O2OTranslator/src/CsPadCalibV1Cvt.cpp    PSCalib/src/
cp $SIT_RELDIR/ana-current/O2OTranslator/include/CsPadCalibV1Cvt.h  PSCalib/include/

Change names, edit these files, add applications for test etc.

svn add PSCalib/include/
svn add PSCalib/src/
svn add PSCalib/app/
...
	
svn update
svn status PSCalib
svn commit -m "Work in progress." PSCalib

List tags:
----------
psvn tags PSCalib

Create new tag:
---------------
cd PSCalib
svn update
psvn tag V00-00-01
==================